[package]
name = "hedera_crypto"
version = "0.0.0"
edition = "2018"
authors = ["LaunchBadge <contact@launchbadge.com>"]

[dependencies]
hex = "0.4.3"
ed25519-dalek = "1.0.1"
thiserror = "1.0.24"
rand = "0.8.3"

pbkdf2 = "0.8.0"

aes = "0.7.4"
#block-modes = "0.8.1"

sha2 = "0.9.5"

hmac = "0.11.0"
stream-ciphers = "0.0.0"
ctr = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
json = "0.12.4"
serde_json = "1.0.64"
serde_repr = "0.1.7"
