[package]
name = "hedera_crypto"
version = "0.0.0"
edition = "2018"
authors = ["LaunchBadge <contact@launchbadge.com>"]

[dependencies]
hex = "0.4.3"
ed25519-dalek = "1.0.1"
thiserror = "1.0.24"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
itertools = "0.10.1"
