[package]
name = "hedera_crypto"
version = "0.1.0"
authors = ["leah <leah@launchbadge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
sha2 = "0.9.5"
