[package]
name = "hedera_crypto"
version = "0.1.0"
authors = ["LaunchBadge <contact@launchbadge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="public_key"
path="src/public_key.rs"

[dependencies]
hex = "0.4.3"

[dependencies.ed25519-dalek]
version = "1"