[package]
name = "hedera_crypto"
version = "0.1.0"
authors = ["LaunchBadge <contact@launchbadge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="keystore"
path="src/keystore.rs"

[dependencies]
bip39 = "1.0.1"
rand = "0.8.3"

[dependencies.ed25519-dalek]
version = "1"
